--- a/utils/load_documents_with_urls.ipynb
+++ b/utils/load_documents_with_urls.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,20 +80,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cell 6: Convert section heading to OpenStax URL\n",
     "def format_url(heading: str) -> str:\n",
     "    clean = re.sub(r'\\s+', ' ', heading).strip()\n",
+    "    clean = re.sub(r'[()]', '', clean)\n",
     "    slug = clean.lower().replace('.', '-').replace(' ', '-')\n",
     "    return f\"https://openstax.org/books/principles-finance/pages/{slug}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -515,6 +516,9 @@
     "embeddings = OpenAIEmbeddings(api_key=openai_api_key)\n",
     "vectorstore = PineconeVectorStore(index_name=index_name, embedding=embeddings)\n",
     "\n",
+    "# Delete all vectors in the index\n",
+    "vectorstore.delete(delete_all=True)\n",
+    "\n",
     "# Upload in batches of 100 documents\n",
     "batch_size = 100\n",
     "for i in range(0, len(all_documents), batch_size):\n",
@@ -526,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
