timestamped youtube videos working.

--- a/utils/test_youtube_retreival.ipynb
+++ b/utils/test_youtube_retreival.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jcz/Projects/FinanceTutor/finance-tutor-ai/env/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -39,7 +31,46 @@
       "of the time value of money and its application in analyzing cash flows. It explores the calculation of future value\n",
       "and present value of mixed streams, where the amounts and timing of payment ...\n",
       "Source: https://youtu.be/WBlEtokQ9sw?t=0\n",
-      "Title: TL;DR 🔊 Finance: Episode 9, Multiple Unequal Payments and the Time Value of Money\n"
+      "Title: TL;DR 🔊 Finance: Episode 9, Multiple Unequal Payments and the Time Value of Money\n",
+      "\n",
+      "Result 4:\n",
+      "Chapter 9:\n",
+      "Time Value of Money,\n",
+      "Unequal Multiple Payment Values Introduction Chapter 9 discusses the concept\n",
+      "of the time value of money and its application in analyzing cash flows. It explores the calculation of future value\n",
+      "and present value of mixed streams, where the amounts and timing of payment ...\n",
+      "Source: https://youtu.be/WBlEtokQ9sw?t=0\n",
+      "Title: TL;DR 🔊 Finance: Episode 9, Multiple Unequal Payments and the Time Value of Money\n",
+      "\n",
+      "Result 5:\n",
+      "play uh as well so a couple other notes with what I've said here now you might be think yourself well press Pap is dollar is a dollar okay but no the value of a dollar is going to change because not only does it depend whether or not you're the payer or the receiver but it's going to depend very muc ...\n",
+      "Source: https://youtu.be/fPlbLcnFMBY?t=1496\n",
+      "Title: OpenStax Finance Ch 01 Intro\n",
+      "\n",
+      "Result 6:\n",
+      "so in this lecture we're going to talk about the time value of money specifically focusing on unequal multiple payment values all right so how do multiple payments of unequal value present themselves in everyday situations so a lot of times we deal with cash flows that have regular payments as we sa ...\n",
+      "Source: https://youtu.be/L238ChWLSZY?t=4\n",
+      "Title: Openstax Finance Ch 09 Time Value of Money III\n",
+      "\n",
+      "Result 7:\n",
+      "business that's sort of shrinking uh that's something you should really consider and it also doesn't take into account time value of money the time the sooner you get the money and the more valuable it is than the later points so it's not looking at either of those functionalities so that's why this ...\n",
+      "Source: https://youtu.be/hfZ6lznPf2U?t=895\n",
+      "Title: Capital Budgeting Decision Methods\n",
+      "\n",
+      "Result 8:\n",
+      "frequently compounding takes place the greater the future value so now to conclude the future value equation must be adjusted for the number of compounding periods when compounding more frequently recall that's the future value equals the present value times 1 plus the interest rate R raised to the  ...\n",
+      "Source: https://youtu.be/uMiXMatYXew?t=900\n",
+      "Title: Openstax Finance Ch 07 Time Value of Money I\n",
+      "\n",
+      "Result 9:\n",
+      "a macroeconomics perspective that informs us about what do we think explation inflation is going to be it could influence interest rates which in the United States the FED controls that could in turn influence borrowing and capital spending plans so the study of federal spending could then help us i ...\n",
+      "Source: https://youtu.be/fPlbLcnFMBY?t=1199\n",
+      "Title: OpenStax Finance Ch 01 Intro\n",
+      "\n",
+      "Result 10:\n",
+      "invest is $27,000 however this is not taken to account the time B of money so what we do is we calculate the interest on the balance every year and we add up the principal plus the interest so we can see over time we don't wind up with 27,000 but at a 7% interest rate all the interest on that accoun ...\n",
+      "Source: https://youtu.be/L238ChWLSZY?t=303\n",
+      "Title: Openstax Finance Ch 09 Time Value of Money III\n"
      ]
     }
    ],
@@ -57,7 +88,7 @@
     "vectorstore = PineconeVectorStore(index_name=\"youtube-index\", embedding=embeddings)\n",
     "\n",
     "query = \"What is the time value of money?\"\n",
-    "results = vectorstore.similarity_search(query, k=3)\n",
+    "results = vectorstore.similarity_search(query, k=10)\n",
     "\n",
     "for i, doc in enumerate(results):\n",
     "    print(f\"\\nResult {i+1}:\")\n",
